# LOKTANTRA

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/game_engine/: __init__.py  level_data.py  levels.py  validator.py
app/routes/: __init__.py  api_routes.py  game_routes.py  leaderboard_routes.py  main_routes.py
app/services/: __init__.py  firestore_service.py  logging_service.py  scoring_engine.py  vertex_ai_service.py
app/static/css/: main.css
app/static/js/: api-client.js  app.js  game-engine.js
app/static/js/levels/: level1-identity.js  level2-silence.js  level3-booth.js  level4-mark.js  level5-scrutiny.js  level6-2km-rule.js  level7-mock-poll.js  level8-seal.js
app/templates/: base.html  game.html  index.html  leaderboard.html
app/utils/: __init__.py
tests/: conftest.py  test_api_routes.py  test_firestore_service.py  test_game_routes.py  test_level_validator.py  test_logging_service.py  test_scoring_engine.py  test_utils.py  test_vertex_ai_service.py
