[project]
name = "loktantra"
version = "2.0.0"
description = "A production-grade interactive election simulator for India"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "LOKTANTRA Team" },
]
keywords = ["election", "simulator", "civic-education", "india", "eci"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Simulation",
]

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",
    "import-error",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
